# asdf-pydantic-example

./: README.md  pyproject.toml
examples/: circle.asdf
shapes/: circle.py  integration.py
tests/: sanity_test.py
